# ChaosTestingAgent

./: .gitignore  UseCases.code-workspace
Phase1-VulnarabilitiReport/: README copy.md  README.md  pyproject.toml
Phase1-VulnarabilitiReport/cloudformation/: breakbot-readonly-role.yaml  breakbot-scanner-role.yaml
Phase1-VulnarabilitiReport/docs/: onboarding.md
Phase1-VulnarabilitiReport/scripts/: visualize_mock.py
Phase1-VulnarabilitiReport/src/breakbot/: README.md  __init__.py
Phase1-VulnarabilitiReport/src/breakbot/brain/: README.md  __init__.py  analyst.py  report.py
Phase1-VulnarabilitiReport/src/breakbot/cli/: README.md  __init__.py  main.py
Phase1-VulnarabilitiReport/src/breakbot/graph/: README.md  __init__.py  builder.py  edges.py  serializer.py  trail_overlay.py  visualize.py
Phase1-VulnarabilitiReport/src/breakbot/models/: README.md  __init__.py  resource.py
Phase1-VulnarabilitiReport/src/breakbot/org/: __init__.py  cross_account.py
Phase1-VulnarabilitiReport/src/breakbot/posture/: __init__.py  analyzer.py  findings.py
Phase1-VulnarabilitiReport/src/breakbot/scanner/: README.md  __init__.py  apigateway.py  base.py  cdn.py  cloudtrail.py  cognito.py  (+12 more)
Phase1-VulnarabilitiReport/tests/integration/: test_end_to_end.py
Phase1-VulnarabilitiReport/tests/unit/: test_base_scanner.py  test_compute_scanner.py  test_data_scanner.py  test_graph_builder.py  test_identity_scanner.py  test_networking_scanner.py  test_posture_analyzer.py  test_resource_policy_edges.py  test_secrets_scanner.py  test_serializer_ranking.py  test_serializer_truncation.py
(+4 files in other folders)
