[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breakbot"
version = "0.1.0"
description = "Read-only AWS security scanner with LLM-powered attack path reasoning"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "moto[all]>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]
llm = [
    "anthropic>=0.25",
]
viz = [
    "pyvis>=0.3",
]

[project.scripts]
breakbot = "breakbot.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit real AWS (require credentials)",
]
